--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,190 @@
-.App {
+                                            /* Header */
+
+.punchline{
+  margin: 50px auto 10px auto;
+  width: 70%;
+  font-family: sans-serif;
+  text-align: center; 
+  
+  font-size: large;
+  font-weight: bold;
+}
+
+h1.choose{
   text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-shadow: 2px 4px 5px black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.boxchoose{
+  /* box-shadow: 5px 5px 10px gray; */
+  height: 180px;
+  /* border: 1px solid green; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.innerdiv{
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 160px;
+  
+    box-shadow: 0 0 20px grey;
+}
+
+.fa-drafting-compass,.fa-seedling,.fa-radiation{
+  font-size: 60px !important;
+  color: firebrick !important;
+}
+
+                                                            /* NUmbers */
+
+.numb{
+    /* margin-top: 50px;
+    background-image: url("225692.jpg");
+    background-size: cover;
+    height: 650px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+} 
+h1.our{
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    text-shadow: 2px 4px 5px black;
+    padding-top: 30px ;
+    text-align: center;
+}
+.proj,.serv,.cli{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 200px;
+    /* background-color: white;
+    box-shadow: 3px 4px 10px grey; */
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+/* .backu{
+    background-image: url("images/225692.jpg");
+    background-size: cover;
+    margin-top: 50px;
+    height: 340px;
+} */
+.fa-code,.fa-line-chart,.fa-users{
+    font-size: 60px !important;
+    color: firebrick !important;
+}
+h2{
+    font-weight: bold;
+}
+
+                /* Services */
+
+
+.head{
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    text-shadow: 2px 4px 5px black;
+ }
+
+ .servicekiimage{
+  background-image: url("images/technology.jpg");
+  background-size: cover;
+  height: 340px;
+}
+.our{
+  text-align: center;
+  border-top: 50px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.automationimage,.solutionsimage,.rdimage{
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  height: 210px;
+  
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+.servicetitle{
+  margin-top: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+}
+h1.mob{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-shadow: 2px 4px 5px black;
+  padding-top: 20px ; 
+  color: white;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mobkadiv2{
+  /* margin-top: 50px;
+  background-image: url("225692.jpg");
+  background-size: cover;
+  height: 650px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+} 
+
+.androiddiv,.iosdiv,.hybriddiv{
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 200px;
+  background-color: firebrick;
+  box-shadow: 4px 5px 5px gray;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
 }
+
+
+h1.web{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  text-shadow: 2px 4px 5px black;
+  padding-top: 20px ; 
+  text-align: center;
+  color: white;
+}
+
+.webkadiv2{
+  /* margin-top: 50px;
+  background-image: url("225692.jpg");
+  background-size: cover;
+  height: 650px; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+} 
+
+.phpdiv,.pythondiv,.nodejsdiv,.javadiv{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 200px;
+  background-color: firebrick;
+  box-shadow: 4px 5px 5px grey;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+ 
